# Agentic-MAS

./: .env.example  .gitignore  README.md  published_cids.json  pyproject.toml  requirements.txt  start_all.sh  stop_all.sh
agents/mcp_servers/: __init__.py  medical_tools_service.py
agents/org_a_medical/: agent.py  agent_executor_a2a.py  card.py  main.py
agents/org_b_satellite/: agent.py  agent_executor_a2a.py  card.py  main.py
agents/org_c_general/: agent.py  agent_executor_a2a.py  card.py  main.py
config/: a2a_config.py  llm_config.py  security_config.py
config/mcp/: README.md  general.json  medical.json  satellite.json
docs/: SECURITY_CONFIG.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
infrastructure/: docker-compose.yml  otel-collector-config.yaml
infrastructure/scripts/: init_minio.sh
infrastructure/slim/: config.yaml
oasf_records/: General_Image_Classifier___Organization_C.json  Medical_Image_Classifier___Organization_A.json  Satellite_Image_Classifier___Organization_B.json
scripts/: docker-compose-ads.yaml  publish_agent_records.py  publish_agent_records.sh  start_ads.sh  start_gateway.sh  start_general_agent.sh  start_infrastructure.sh  start_mcp_medical.sh  start_medical_agent.sh  start_planner.sh  start_satellite_agent.sh  stop_ads.sh
services/gateway/: main.py
services/planner/: agent_langgraph.py  main.py  shared.py  tools.py
services/verifier/: augmentation_test.py  confidence_gate.py  ensemble_vote.py  main.py
shared/discovery/: __init__.py  base.py  (+2 more)
(+16 files in other folders)
