[project]
name = "agntcy-classification-system"
version = "1.0.0"
description = "Multi-organization image classification routing system"
authors = [
    {name = "AGNTCY Contributors", email = "noreply@agntcy.io"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiohttp>=3.9.1",
    "pydantic>=2.5.3",
    "nats-py>=2.6.0",
    "minio>=7.2.3",
    "Pillow>=10.2.0",
    "numpy>=1.26.3",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
